--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
     "sass": "^1.57.1",
+    "tesseract.js": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
