--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
@@ -17,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
     "sass": "^1.57.1",
+    "tailwind-merge": "^2.2.1",
     "tesseract.js": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
