--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_BASE_URL=https://true-social.vercel.app/
+REACT_APP_SERVER_BASE_URL=https://true-social.vercel.app
 REACT_APP_PREDICT_URL=http://127.0.0.1:5000/fake_news_prediction
