--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "cp static.json build/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
